# crab-url

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/[urlId]/: page.tsx
frontend/src/components/: AppNavbar.tsx  AppSection.tsx  CountryVisitsTable.tsx  Footer.tsx  ShortedUrlCard.tsx  TotalVisitsKpi.tsx
frontend/src/constants/: index.ts
frontend/src/interfaces/: index.ts
frontend/src/pages/: Check.tsx  Short.tsx
frontend/src/services/: add_url.ts  check_id.ts  get_url_metrics.ts
requests/: add.http  check.http  health.http
src/: app.rs  error.rs  main.rs  telemetry.rs  trace_layer.rs  url_repository.rs
src/cli/: instrumentation.rs  logger.rs  mod.rs
src/models/: metric.rs  mod.rs  url.rs
src/routes/: add.rs  check.rs  health.rs  mod.rs  not_found.rs  redirect.rs
src/routes/metrics/: get_metrics.rs  mod.rs
src/services/: metrics_client.rs  mod.rs  url_metrics.rs
