[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
dotenvy = "0.15.7"
redis = { version = "0.23.1", features = ["tls-native-tls"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = [
  "trace",
], default-features = false }
tracing = "0.1.37"
tracing-logfmt = "0.3.2"
tracing-subscriber = "0.3.17"
