[package]
name = "crab-url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
clap = { version = "4.4.1", features = ["derive", "env"] }
nanoid = "0.4.0"
redis = { version = "0.23.1", features = ["tls-native-tls"] }
serde = { version = "1.0.180", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.3", features = [
  "trace",
  "cors",
  "fs",
], default-features = false }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
tracing-error = "0.2"
color-eyre = { version = "0.6", default-features = false, features = [
  "issue-url",
  "tracing-error",
  "capture-spantrace",
  "color-spantrace",
] }
thiserror = "1"
hyper = "1.0.0"
tower = "0.4.13"
chrono = { version = "0.4.31", features = ["serde"] }
ipgeolocate = "0.3.5"
libsql-client = "0.31.11"
anyhow = "1.0.75"
axum-macros = "0.3.8"
